--- a/public/index.html
+++ b/public/index.html
@@ -31,4 +31,9 @@
       To create a production bundle, use `npm run build`.
     -->
   </body>
+  <div class="banner">
+    <div class="container">
+      <a href="https://github.com/vitalyford/react-redux-realworld-example-app">Frontend</a> and <a href="https://github.com/vitalyford/flask-realworld-example-app">Backend</a>
+    </div>
+  </div>
 </html>
