Update margin for the footer

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       To create a production bundle, use `npm run build`.
     -->
   </body>
-  <div class="banner">
+  <div class="banner" style="margin-top: 20px;">
     <div class="container">
       <a href="https://github.com/vitalyford/react-redux-realworld-example-app">Frontend</a> and <a href="https://github.com/vitalyford/flask-realworld-example-app">Backend</a>
     </div>
